Code refactoring - Beam is now in separate class
Now the Beam in the Game Over menu might be able to work

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -50,6 +50,7 @@
      <Compile Include="Assets\Scripts\MainMenu\HighScoreDisplay.cs" />
      <Compile Include="Assets\Scripts\MainMenu\MenuScale.cs" />
      <Compile Include="Assets\Scripts\MainMenu\StartGame.cs" />
+     <Compile Include="Assets\Scripts\Util\Beam.cs" />
      <Compile Include="Assets\Scripts\Util\CubeGibs.cs" />
      <Compile Include="Assets\Scripts\Util\Difficulty.cs" />
      <Compile Include="Assets\Scripts\Util\GameValues.cs" />
