--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -41,11 +41,13 @@
      <Compile Include="Assets\Scripts\GameManagers\EndGame.cs" />
      <Compile Include="Assets\Scripts\GameManagers\EndGameDataExport.cs" />
      <Compile Include="Assets\Scripts\GameManagers\GameProgression.cs" />
+     <Compile Include="Assets\Scripts\GameManagers\GameStartAnimations.cs" />
      <Compile Include="Assets\Scripts\GameManagers\HighScoreManager.cs" />
      <Compile Include="Assets\Scripts\GameManagers\Player\PlayerCollision.cs" />
      <Compile Include="Assets\Scripts\GameManagers\Player\PlayerMovement.cs" />
      <Compile Include="Assets\Scripts\GameManagers\Player\Score.cs" />
      <Compile Include="Assets\Scripts\GameManagers\Treadmill.cs" />
+     <Compile Include="Assets\Scripts\MainMenu\CamSceneSwitch.cs" />
      <Compile Include="Assets\Scripts\MainMenu\CubeSpin.cs" />
      <Compile Include="Assets\Scripts\MainMenu\DifficultyManager.cs" />
      <Compile Include="Assets\Scripts\MainMenu\GameOverManager.cs" />
