--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -71,6 +71,7 @@
      <Compile Include="Assets\Scripts\MainMenu\SettingsMenu\Options.cs" />
      <Compile Include="Assets\Scripts\MainMenu\SettingsMenu\SettingsMenu.cs" />
      <Compile Include="Assets\Scripts\MainMenu\StartGame.cs" />
+     <Compile Include="Assets\Scripts\MainMenu\TutorialMenu.cs" />
      <Compile Include="Assets\Scripts\MobileLaunchSettings.cs" />
      <Compile Include="Assets\Scripts\Util\AnimationDisappear.cs" />
      <Compile Include="Assets\Scripts\Util\BGObject.cs" />
