--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -40,7 +40,6 @@
      <Compile Include="Assets\Scripts\Audio\MusicManager.cs" />
      <Compile Include="Assets\Scripts\Audio\SFXVolumeManager.cs" />
      <Compile Include="Assets\Scripts\Credits.cs" />
-     <Compile Include="Assets\Scripts\Dev\ClearPlayerPrefs.cs" />
      <Compile Include="Assets\Scripts\EULA.cs" />
      <Compile Include="Assets\Scripts\GameManagers\BackgroundObjects.cs" />
      <Compile Include="Assets\Scripts\GameManagers\CubeSpawner.cs" />
@@ -68,6 +67,7 @@
      <Compile Include="Assets\Scripts\MainMenu\GameOverManager.cs" />
      <Compile Include="Assets\Scripts\MainMenu\HighScoreDisplay.cs" />
      <Compile Include="Assets\Scripts\MainMenu\MenuScale.cs" />
+     <Compile Include="Assets\Scripts\MainMenu\QuitGame.cs" />
      <Compile Include="Assets\Scripts\MainMenu\SettingsMenu\About.cs" />
      <Compile Include="Assets\Scripts\MainMenu\SettingsMenu\Options.cs" />
      <Compile Include="Assets\Scripts\MainMenu\SettingsMenu\SettingsMenu.cs" />
