More work on Upgrade Menu
- Created and added symbols for upgrade paths
- Made a way to get between Main Menu and Upgrades

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -48,6 +48,7 @@
      <Compile Include="Assets\Scripts\Audio\ButtonSounds.cs" />
      <Compile Include="Assets\Scripts\Util\DifficultyValuesHolder.cs" />
      <Compile Include="Assets\Scripts\GameManagers\GameStartAnimations.cs" />
+     <Compile Include="Assets\Scripts\MainMenu\EnterUpgrades.cs" />
      <Compile Include="Assets\Scripts\GameManagers\EndGame.cs" />
      <Compile Include="Assets\Scripts\Util\PowerUpType.cs" />
      <Compile Include="Assets\Scripts\MainMenu\TutorialMenu.cs" />
