--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -22,7 +22,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>Temp\bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE;UNITY_2020_3_1;UNITY_2020_3;UNITY_2020;UNITY_5_3_OR_NEWER;UNITY_5_4_OR_NEWER;UNITY_5_5_OR_NEWER;UNITY_5_6_OR_NEWER;UNITY_2017_1_OR_NEWER;UNITY_2017_2_OR_NEWER;UNITY_2017_3_OR_NEWER;UNITY_2017_4_OR_NEWER;UNITY_2018_1_OR_NEWER;UNITY_2018_2_OR_NEWER;UNITY_2018_3_OR_NEWER;UNITY_2018_4_OR_NEWER;UNITY_2019_1_OR_NEWER;UNITY_2019_2_OR_NEWER;UNITY_2019_3_OR_NEWER;UNITY_2019_4_OR_NEWER;UNITY_2020_1_OR_NEWER;UNITY_2020_2_OR_NEWER;UNITY_2020_3_OR_NEWER;PLATFORM_ARCH_64;UNITY_64;UNITY_INCLUDE_TESTS;USE_SEARCH_ENGINE_API;SCENE_TEMPLATE_MODULE;ENABLE_AR;ENABLE_AUDIO;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_EVENT_QUEUE;ENABLE_MICROPHONE;ENABLE_MULTIPLE_DISPLAYS;ENABLE_PHYSICS;ENABLE_TEXTURE_STREAMING;ENABLE_VIRTUALTEXTURING;ENABLE_UNET;ENABLE_LZMA;ENABLE_UNITYEVENTS;ENABLE_VR;ENABLE_WEBCAM;ENABLE_UNITYWEBREQUEST;ENABLE_WWW;ENABLE_CLOUD_SERVICES;ENABLE_CLOUD_SERVICES_COLLAB;ENABLE_CLOUD_SERVICES_COLLAB_SOFTLOCKS;ENABLE_CLOUD_SERVICES_ADS;ENABLE_CLOUD_SERVICES_USE_WEBREQUEST;ENABLE_CLOUD_SERVICES_CRASH_REPORTING;ENABLE_CLOUD_SERVICES_PURCHASING;ENABLE_CLOUD_SERVICES_ANALYTICS;ENABLE_CLOUD_SERVICES_UNET;ENABLE_CLOUD_SERVICES_BUILD;ENABLE_CLOUD_LICENSE;ENABLE_EDITOR_HUB_LICENSE;ENABLE_WEBSOCKET_CLIENT;ENABLE_DIRECTOR_AUDIO;ENABLE_DIRECTOR_TEXTURE;ENABLE_MANAGED_JOBS;ENABLE_MANAGED_TRANSFORM_JOBS;ENABLE_MANAGED_ANIMATION_JOBS;ENABLE_MANAGED_AUDIO_JOBS;INCLUDE_DYNAMIC_GI;ENABLE_MONO_BDWGC;ENABLE_SCRIPTING_GC_WBARRIERS;PLATFORM_SUPPORTS_MONO;RENDER_SOFTWARE_CURSOR;ENABLE_VIDEO;PLATFORM_STANDALONE;PLATFORM_STANDALONE_WIN;UNITY_STANDALONE_WIN;UNITY_STANDALONE;ENABLE_RUNTIME_GI;ENABLE_MOVIES;ENABLE_NETWORK;ENABLE_CRUNCH_TEXTURE_COMPRESSION;ENABLE_OUT_OF_PROCESS_CRASH_HANDLER;ENABLE_CLUSTER_SYNC;ENABLE_CLUSTERINPUT;PLATFORM_UPDATES_TIME_OUTSIDE_OF_PLAYER_LOOP;GFXDEVICE_WAITFOREVENT_MESSAGEPUMP;ENABLE_WEBSOCKET_HOST;ENABLE_MONO;NET_4_6;ENABLE_PROFILER;UNITY_ASSERTIONS;UNITY_EDITOR;UNITY_EDITOR_64;UNITY_EDITOR_WIN;ENABLE_UNITY_COLLECTIONS_CHECKS;ENABLE_BURST_AOT;UNITY_TEAM_LICENSE;ENABLE_CUSTOM_RENDER_TEXTURE;ENABLE_DIRECTOR;ENABLE_LOCALIZATION;ENABLE_SPRITES;ENABLE_TERRAIN;ENABLE_TILEMAP;ENABLE_TIMELINE;ENABLE_LEGACY_INPUT_MANAGER;CSHARP_7_OR_LATER;CSHARP_7_3_OR_NEWER</DefineConstants>
+    <DefineConstants>DEBUG;TRACE;UNITY_2020_3_1;UNITY_2020_3;UNITY_2020;UNITY_5_3_OR_NEWER;UNITY_5_4_OR_NEWER;UNITY_5_5_OR_NEWER;UNITY_5_6_OR_NEWER;UNITY_2017_1_OR_NEWER;UNITY_2017_2_OR_NEWER;UNITY_2017_3_OR_NEWER;UNITY_2017_4_OR_NEWER;UNITY_2018_1_OR_NEWER;UNITY_2018_2_OR_NEWER;UNITY_2018_3_OR_NEWER;UNITY_2018_4_OR_NEWER;UNITY_2019_1_OR_NEWER;UNITY_2019_2_OR_NEWER;UNITY_2019_3_OR_NEWER;UNITY_2019_4_OR_NEWER;UNITY_2020_1_OR_NEWER;UNITY_2020_2_OR_NEWER;UNITY_2020_3_OR_NEWER;UNITY_INCLUDE_TESTS;USE_SEARCH_ENGINE_API;SCENE_TEMPLATE_MODULE;ENABLE_AR;ENABLE_AUDIO;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_EVENT_QUEUE;ENABLE_MICROPHONE;ENABLE_MULTIPLE_DISPLAYS;ENABLE_PHYSICS;ENABLE_TEXTURE_STREAMING;ENABLE_VIRTUALTEXTURING;ENABLE_UNET;ENABLE_LZMA;ENABLE_UNITYEVENTS;ENABLE_VR;ENABLE_WEBCAM;ENABLE_UNITYWEBREQUEST;ENABLE_WWW;ENABLE_CLOUD_SERVICES;ENABLE_CLOUD_SERVICES_COLLAB;ENABLE_CLOUD_SERVICES_COLLAB_SOFTLOCKS;ENABLE_CLOUD_SERVICES_ADS;ENABLE_CLOUD_SERVICES_USE_WEBREQUEST;ENABLE_CLOUD_SERVICES_CRASH_REPORTING;ENABLE_CLOUD_SERVICES_PURCHASING;ENABLE_CLOUD_SERVICES_ANALYTICS;ENABLE_CLOUD_SERVICES_UNET;ENABLE_CLOUD_SERVICES_BUILD;ENABLE_CLOUD_LICENSE;ENABLE_EDITOR_HUB_LICENSE;ENABLE_WEBSOCKET_CLIENT;ENABLE_DIRECTOR_AUDIO;ENABLE_DIRECTOR_TEXTURE;ENABLE_MANAGED_JOBS;ENABLE_MANAGED_TRANSFORM_JOBS;ENABLE_MANAGED_ANIMATION_JOBS;ENABLE_MANAGED_AUDIO_JOBS;INCLUDE_DYNAMIC_GI;ENABLE_MONO_BDWGC;ENABLE_SCRIPTING_GC_WBARRIERS;PLATFORM_SUPPORTS_MONO;RENDER_SOFTWARE_CURSOR;ENABLE_VIDEO;PLATFORM_STANDALONE;PLATFORM_STANDALONE_WIN;UNITY_STANDALONE_WIN;UNITY_STANDALONE;ENABLE_RUNTIME_GI;ENABLE_MOVIES;ENABLE_NETWORK;ENABLE_CRUNCH_TEXTURE_COMPRESSION;ENABLE_OUT_OF_PROCESS_CRASH_HANDLER;ENABLE_CLUSTER_SYNC;ENABLE_CLUSTERINPUT;PLATFORM_UPDATES_TIME_OUTSIDE_OF_PLAYER_LOOP;GFXDEVICE_WAITFOREVENT_MESSAGEPUMP;ENABLE_WEBSOCKET_HOST;ENABLE_MONO;NET_4_6;ENABLE_PROFILER;UNITY_ASSERTIONS;UNITY_EDITOR;UNITY_EDITOR_64;UNITY_EDITOR_WIN;ENABLE_UNITY_COLLECTIONS_CHECKS;ENABLE_BURST_AOT;UNITY_TEAM_LICENSE;ENABLE_CUSTOM_RENDER_TEXTURE;ENABLE_DIRECTOR;ENABLE_LOCALIZATION;ENABLE_SPRITES;ENABLE_TERRAIN;ENABLE_TILEMAP;ENABLE_TIMELINE;ENABLE_LEGACY_INPUT_MANAGER;CSHARP_7_OR_LATER;CSHARP_7_3_OR_NEWER</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <NoWarn>0169</NoWarn>
@@ -41,7 +41,7 @@
      <Compile Include="Assets\Scripts\Util\Difficulty.cs" />
      <Compile Include="Assets\Scripts\GameManagers\PowerUpSpawner.cs" />
      <Compile Include="Assets\Scripts\GameManagers\BackgroundObjects.cs" />
-     <Compile Include="Assets\Scripts\Upgrades\SkillViewDataHolder.cs" />
+     <Compile Include="Assets\Scripts\UpgradeMenu\SkillViewDataHolder.cs" />
      <Compile Include="Assets\Scripts\Saving\FileManager.cs" />
      <Compile Include="Assets\Scripts\MainMenu\SettingsMenu\SettingsMenu.cs" />
      <Compile Include="Assets\Scripts\GameManagers\Player\PlayerCollision.cs" />
@@ -56,9 +56,10 @@
      <Compile Include="Assets\Scripts\EULA.cs" />
      <Compile Include="Assets\Scripts\GameManagers\CubeSpawner.cs" />
      <Compile Include="Assets\Scripts\GameManagers\Player\PowerUps\Hardened.cs" />
+     <Compile Include="Assets\Scripts\UpgradeMenu\EnterUpgradeScene.cs" />
      <Compile Include="Assets\Scripts\Util\PowerUp.cs" />
      <Compile Include="Assets\Scripts\MainMenu\GameOverManager.cs" />
-     <Compile Include="Assets\Scripts\Upgrades\ShopManager.cs" />
+     <Compile Include="Assets\Scripts\UpgradeMenu\ShopManager.cs" />
      <Compile Include="Assets\Scripts\GameManagers\BitsSpawner.cs" />
      <Compile Include="Assets\Scripts\Util\BarMove.cs" />
      <Compile Include="Assets\Scripts\GameManagers\GameProgression.cs" />
@@ -67,41 +68,47 @@
      <Compile Include="Assets\Scripts\Util\Row.cs" />
      <Compile Include="Assets\Scripts\Audio\MusicManager.cs" />
      <Compile Include="Assets\Scripts\MainMenu\StartGame.cs" />
+     <Compile Include="Assets\Scripts\GameManagers\Upgrades\HardenedUPGData.cs" />
      <Compile Include="Assets\Scripts\GameManagers\GibManager.cs" />
      <Compile Include="Assets\Scripts\Util\GameValues.cs" />
      <Compile Include="Assets\Scripts\GameManagers\PauseManager.cs" />
      <Compile Include="Assets\Scripts\GameManagers\Player\PowerUps\Align.cs" />
      <Compile Include="Assets\Scripts\Util\PanelObjectHolder.cs" />
      <Compile Include="Assets\Scripts\GameManagers\Player\PowerUps\Decimate.cs" />
-     <Compile Include="Assets\Scripts\Upgrades\ReturnFromUpg.cs" />
+     <Compile Include="Assets\Scripts\UpgradeMenu\ReturnFromUpg.cs" />
      <Compile Include="Assets\Scripts\Audio\SFXVolumeManager.cs" />
      <Compile Include="Assets\Scripts\GameManagers\Player\PowerUps\Blaster.cs" />
      <Compile Include="Assets\Scripts\Credits.cs" />
      <Compile Include="Assets\Scripts\Util\CubeGibsUtil.cs" />
      <Compile Include="Assets\Scripts\MainMenu\DifficultyManager.cs" />
      <Compile Include="Assets\Scripts\GameManagers\Player\PowerUps\PlayerPowerUp.cs" />
-     <Compile Include="Assets\Scripts\Upgrades\UpgradeEffects.cs" />
+     <Compile Include="Assets\Scripts\UpgradeMenu\UpgradeEffects.cs" />
      <Compile Include="Assets\Scripts\MainMenu\BitsDisplay.cs" />
      <Compile Include="Assets\Scripts\MainMenu\SettingsMenu\About.cs" />
-     <Compile Include="Assets\Scripts\Upgrades\BuyMenuDataHolder.cs" />
+     <Compile Include="Assets\Scripts\UpgradeMenu\BuyMenuDataHolder.cs" />
      <Compile Include="Assets\Scripts\GameManagers\Player\PowerUps\Guidelines.cs" />
      <Compile Include="Assets\Scripts\Saving\SaveManager.cs" />
      <Compile Include="Assets\Scripts\Util\Beam.cs" />
      <Compile Include="Assets\Scripts\GameManagers\Player\PowerUps\Compression.cs" />
      <Compile Include="Assets\Scripts\MainMenu\MenuScale.cs" />
      <Compile Include="Assets\Scripts\Util\ButtonAutoSelect.cs" />
-     <Compile Include="Assets\Scripts\Upgrades\BuyMenuData.cs" />
+     <Compile Include="Assets\Scripts\UpgradeMenu\BuyMenuData.cs" />
      <Compile Include="Assets\Scripts\GameManagers\Player\PowerUps\TimeDilation.cs" />
-     <Compile Include="Assets\Scripts\Upgrades\SkillViewData.cs" />
+     <Compile Include="Assets\Scripts\UpgradeMenu\SkillViewData.cs" />
      <Compile Include="Assets\Scripts\GameManagers\EndGameDataExport.cs" />
      <Compile Include="Assets\Scripts\GameManagers\Player\PlayerMovement.cs" />
      <Compile Include="Assets\Scripts\Util\TagHolder.cs" />
+     <Compile Include="Assets\Scripts\GameManagers\Upgrades\BlasterUPGData.cs" />
      <Compile Include="Assets\Scripts\MainMenu\QuitGame.cs" />
      <Compile Include="Assets\Scripts\GameManagers\Player\PowerUps\AbstractPowerUp.cs" />
      <Compile Include="Assets\Scripts\GameManagers\Player\Score.cs" />
      <Compile Include="Assets\Scripts\MainMenu\HighScoreDisplay.cs" />
      <Compile Include="Assets\Scripts\Util\BGObject.cs" />
-     <Compile Include="Assets\Scripts\Upgrades\EnterUpgradeScene.cs" />
+     <Compile Include="Assets\Scripts\GameManagers\Upgrades\AlignUPGData.cs" />
+     <Compile Include="Assets\Scripts\GameManagers\Upgrades\TimeDilationUPGData.cs" />
+     <Compile Include="Assets\Scripts\GameManagers\Upgrades\DecimateUPGData.cs" />
+     <Compile Include="Assets\Scripts\GameManagers\Upgrades\GuidelinesUPGData.cs" />
+     <Compile Include="Assets\Scripts\GameManagers\Upgrades\CompressionUPGData.cs" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
@@ -693,73 +700,73 @@
         <HintPath>C:/Program Files/Unity/Hub/Editor/2020.3.1f1/Editor/Data/MonoBleedingEdge/lib/mono/4.7.1-api/Facades/System.Xml.XPath.XDocument.dll</HintPath>
     </Reference>
     <Reference Include="Unity.ShaderGraph.Editor">
-        <HintPath>C:/Users/Thomas/Documents/GitHub/CubeRunner/Library/ScriptAssemblies/Unity.ShaderGraph.Editor.dll</HintPath>
+        <HintPath>S:/Thomas/Documents/GitHub/CubeRunner/Library/ScriptAssemblies/Unity.ShaderGraph.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VSCode.Editor">
-        <HintPath>C:/Users/Thomas/Documents/GitHub/CubeRunner/Library/ScriptAssemblies/Unity.VSCode.Editor.dll</HintPath>
+        <HintPath>S:/Thomas/Documents/GitHub/CubeRunner/Library/ScriptAssemblies/Unity.VSCode.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.RenderPipelines.Universal.Shaders">
-        <HintPath>C:/Users/Thomas/Documents/GitHub/CubeRunner/Library/ScriptAssemblies/Unity.RenderPipelines.Universal.Shaders.dll</HintPath>
+        <HintPath>S:/Thomas/Documents/GitHub/CubeRunner/Library/ScriptAssemblies/Unity.RenderPipelines.Universal.Shaders.dll</HintPath>
     </Reference>
     <Reference Include="Unity.RenderPipelines.Universal.Editor">
-        <HintPath>C:/Users/Thomas/Documents/GitHub/CubeRunner/Library/ScriptAssemblies/Unity.RenderPipelines.Universal.Editor.dll</HintPath>
+        <HintPath>S:/Thomas/Documents/GitHub/CubeRunner/Library/ScriptAssemblies/Unity.RenderPipelines.Universal.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.RenderPipelines.Universal.Runtime">
-        <HintPath>C:/Users/Thomas/Documents/GitHub/CubeRunner/Library/ScriptAssemblies/Unity.RenderPipelines.Universal.Runtime.dll</HintPath>
+        <HintPath>S:/Thomas/Documents/GitHub/CubeRunner/Library/ScriptAssemblies/Unity.RenderPipelines.Universal.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro.Editor">
-        <HintPath>C:/Users/Thomas/Documents/GitHub/CubeRunner/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
+        <HintPath>S:/Thomas/Documents/GitHub/CubeRunner/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualStudio.Editor">
-        <HintPath>C:/Users/Thomas/Documents/GitHub/CubeRunner/Library/ScriptAssemblies/Unity.VisualStudio.Editor.dll</HintPath>
+        <HintPath>S:/Thomas/Documents/GitHub/CubeRunner/Library/ScriptAssemblies/Unity.VisualStudio.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.RenderPipeline.Universal.ShaderLibrary">
-        <HintPath>C:/Users/Thomas/Documents/GitHub/CubeRunner/Library/ScriptAssemblies/Unity.RenderPipeline.Universal.ShaderLibrary.dll</HintPath>
+        <HintPath>S:/Thomas/Documents/GitHub/CubeRunner/Library/ScriptAssemblies/Unity.RenderPipeline.Universal.ShaderLibrary.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Timeline.Editor">
-        <HintPath>C:/Users/Thomas/Documents/GitHub/CubeRunner/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
+        <HintPath>S:/Thomas/Documents/GitHub/CubeRunner/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Timeline">
-        <HintPath>C:/Users/Thomas/Documents/GitHub/CubeRunner/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
+        <HintPath>S:/Thomas/Documents/GitHub/CubeRunner/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
     </Reference>
     <Reference Include="Unity.RenderPipelines.ShaderGraph.ShaderGraphLibrary">
-        <HintPath>C:/Users/Thomas/Documents/GitHub/CubeRunner/Library/ScriptAssemblies/Unity.RenderPipelines.ShaderGraph.ShaderGraphLibrary.dll</HintPath>
+        <HintPath>S:/Thomas/Documents/GitHub/CubeRunner/Library/ScriptAssemblies/Unity.RenderPipelines.ShaderGraph.ShaderGraphLibrary.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro">
-        <HintPath>C:/Users/Thomas/Documents/GitHub/CubeRunner/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
+        <HintPath>S:/Thomas/Documents/GitHub/CubeRunner/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Mathematics.Editor">
-        <HintPath>C:/Users/Thomas/Documents/GitHub/CubeRunner/Library/ScriptAssemblies/Unity.Mathematics.Editor.dll</HintPath>
+        <HintPath>S:/Thomas/Documents/GitHub/CubeRunner/Library/ScriptAssemblies/Unity.Mathematics.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Searcher.Editor">
-        <HintPath>C:/Users/Thomas/Documents/GitHub/CubeRunner/Library/ScriptAssemblies/Unity.Searcher.Editor.dll</HintPath>
+        <HintPath>S:/Thomas/Documents/GitHub/CubeRunner/Library/ScriptAssemblies/Unity.Searcher.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.RenderPipelines.Core.Runtime">
-        <HintPath>C:/Users/Thomas/Documents/GitHub/CubeRunner/Library/ScriptAssemblies/Unity.RenderPipelines.Core.Runtime.dll</HintPath>
+        <HintPath>S:/Thomas/Documents/GitHub/CubeRunner/Library/ScriptAssemblies/Unity.RenderPipelines.Core.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="Unity.DeviceSimulator.Editor">
-        <HintPath>C:/Users/Thomas/Documents/GitHub/CubeRunner/Library/ScriptAssemblies/Unity.DeviceSimulator.Editor.dll</HintPath>
+        <HintPath>S:/Thomas/Documents/GitHub/CubeRunner/Library/ScriptAssemblies/Unity.DeviceSimulator.Editor.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.UI">
-        <HintPath>C:/Users/Thomas/Documents/GitHub/CubeRunner/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
+        <HintPath>S:/Thomas/Documents/GitHub/CubeRunner/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Rider.Editor">
-        <HintPath>C:/Users/Thomas/Documents/GitHub/CubeRunner/Library/ScriptAssemblies/Unity.Rider.Editor.dll</HintPath>
+        <HintPath>S:/Thomas/Documents/GitHub/CubeRunner/Library/ScriptAssemblies/Unity.Rider.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.RenderPipelines.Core.ShaderLibrary">
-        <HintPath>C:/Users/Thomas/Documents/GitHub/CubeRunner/Library/ScriptAssemblies/Unity.RenderPipelines.Core.ShaderLibrary.dll</HintPath>
+        <HintPath>S:/Thomas/Documents/GitHub/CubeRunner/Library/ScriptAssemblies/Unity.RenderPipelines.Core.ShaderLibrary.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.UI">
-        <HintPath>C:/Users/Thomas/Documents/GitHub/CubeRunner/Library/ScriptAssemblies/UnityEngine.UI.dll</HintPath>
+        <HintPath>S:/Thomas/Documents/GitHub/CubeRunner/Library/ScriptAssemblies/UnityEngine.UI.dll</HintPath>
     </Reference>
     <Reference Include="Unity.DeviceSimulator.Tests.Common">
-        <HintPath>C:/Users/Thomas/Documents/GitHub/CubeRunner/Library/ScriptAssemblies/Unity.DeviceSimulator.Tests.Common.dll</HintPath>
+        <HintPath>S:/Thomas/Documents/GitHub/CubeRunner/Library/ScriptAssemblies/Unity.DeviceSimulator.Tests.Common.dll</HintPath>
     </Reference>
     <Reference Include="Unity.RenderPipelines.Core.Editor">
-        <HintPath>C:/Users/Thomas/Documents/GitHub/CubeRunner/Library/ScriptAssemblies/Unity.RenderPipelines.Core.Editor.dll</HintPath>
+        <HintPath>S:/Thomas/Documents/GitHub/CubeRunner/Library/ScriptAssemblies/Unity.RenderPipelines.Core.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Mathematics">
-        <HintPath>C:/Users/Thomas/Documents/GitHub/CubeRunner/Library/ScriptAssemblies/Unity.Mathematics.dll</HintPath>
+        <HintPath>S:/Thomas/Documents/GitHub/CubeRunner/Library/ScriptAssemblies/Unity.Mathematics.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
